# docparse

./: .gitignore  Cargo.toml  layout.py  mine.jsonl  out.jsonl  pyproject.toml  repomix-output.xml  sample_layout.json
rust/pdf_backend_pdfium/: Cargo.toml
rust/pdf_backend_pdfium/src/: lib.rs  rasteriser.rs
rust/structure_reasoner/: Cargo.toml
rust/structure_reasoner/src/: lib.rs
src/docparse/: __init__.py  __main__.py  cli.py  layout.py  text.py
tests/: 1.py  ren.py  save.py  tttt.py
