[project]
name = "docparse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "typer>=0.12",
    "click>=8.1.7,<8.2.0"
]

[build-system]
requires = ["maturin>=1.6"]
build-backend = "maturin"


[project.optional-dependencies]
cpu = ["onnxruntime>=1.17,<2.0"]
gpu = ["onnxruntime-gpu>=1.17,<2.0"]

[tool.maturin]
python-source    = "src"
manifest-path    = "rust/pdf_backend_pdfium/Cargo.toml"
features         = ["pyo3/extension-module"]



[project.scripts]
docparse = "docparse.cli:app"
