workspace.resolver = "2"

[package]
name    = "pdf_backend_pdfium"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3          = { version = "0.21", features = ["extension-module"] }
once_cell     = "1.19" # Consider updating to 1.21.3 as seen in your build log if no conflicts
anyhow        = "1.0.98" # As seen in your build log
pdfium-render = { version = "0.8.31", features = ["thread_safe","sync", "image"] }
serde         = { version = "1.0.219", features = ["derive"] } # As seen in your build log
serde_json    = "1.0.140" # As seen in your build log